完成注册页面编写 Signed-off-by: magic666 <@magic666>

--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -10,12 +10,9 @@
 
 </head>
 <body>
-    <div class="header">
-        <div class="logo">
-            
-        </div>
-        
-
+    <div class="login-header">
+        <div class="logo"></div>
+        <div class="login-logo">用户登录</div>
     </div>
     <div class="contain">
         <div class="login">
@@ -50,7 +47,7 @@
               </form>
               <span >
                 <a href="#">忘记密码</a>
-                  <a href="#">免费注册</a>
+                  <a href="regist.html">免费注册</a>
               </span>
         </div>
     </div>
