完成商品详情

--- a/src/main/webapp/pages/userinfo.html
+++ b/src/main/webapp/pages/userinfo.html
@@ -12,7 +12,7 @@
     <!-- 导航栏 -->
     <div class="userinfo-nav">
         <div class="regist-layout">
-            <span ><a href="login.html" style="line-height: 35px;">返回首页</a></span>
+            <span ><a href="index.html" style="line-height: 35px;">返回首页</a></span>
         </div>
     </div>
 
@@ -21,6 +21,7 @@
         <div class="userinfo-left">
           <ul style="list-style: none outside none; margin: 0; padding: 0;">
             <li><a id="info" class="active" href="#">个人信息</a></li>
+            <li><a id="my-product" href="#">我的发布</a></li>
             <li><a id="modify" href="#">修改信息</a></li>
           </ul>
         </div>
@@ -49,6 +50,8 @@
                     <div class="submit" style=" padding-top: 20px;font-size: 20px;"><input class="btn btn-default" type="submit" value="提交" onclick="verify()" ></div>
                 </form>
             </div>
+        <!-- 展示我发布的商品 -->
+        
         </div>
 <!-- 底部 -->
     </div>
