--- a/src/main/webapp/pages/regist.html
+++ b/src/main/webapp/pages/regist.html
@@ -10,11 +10,13 @@
 
 </head>
 <body >
+  <!-- 顶部导航栏 -->
     <div class="regist-nav">
         <div class="regist-layout">
             <span ><a href="login.html" style="line-height: 35px;">返回登录</a></span>
         </div>
     </div>
+  <!-- 主页面 -->
     <div class="regist-layout">
         <div class="header">
             <div class="logo">
@@ -50,7 +52,7 @@
         </div>
     </div>
     
-    <!-- 底部 -->
+<!-- 底部 -->
   <div class="footer">
       <div class="w">
           <div class="copyright" style="float: left; margin-top: 15px; font-size: 12px ;color: #7b7b7b;">
