--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -17,17 +17,17 @@
     <div class="contain">
         <div class="login">
             <div class="title" style="margin-top: 15px; text-align: center; font-size: 30px;">登录</div>
-            <form class="form-horizontal">
+            <form action="/pages/login" method="post" class="form-horizontal">
                 <div class="form-group">
                   <label for="inputEmail3" class="col-sm-2 control-label">账号</label>
                   <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputEmail3" placeholder="请输入账号">
+                    <input type="text" name="userName" class="form-control" id="inputEmail3" placeholder="请输入账号">
                   </div>
                 </div>
                 <div class="form-group" style="margin-top: 20px;">
                   <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
                   <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword3" placeholder="请输入密码">
+                    <input type="password" name="password" class="form-control" id="inputPassword3" placeholder="请输入密码">
                   </div>
                 </div>
                 <div class="form-group">
