--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -10,47 +10,47 @@
 
 </head>
 <body>
-    <div class="login-header">
-        <div class="logo"></div>
-        <div class="login-logo">用户登录</div>
-    </div>
-    <div class="contain">
-        <div class="login">
-            <div class="title" style="margin-top: 15px; text-align: center; font-size: 30px;">登录</div>
-            <form action="/pages/login" method="post" class="form-horizontal">
-                <div class="form-group">
-                  <label for="inputEmail3" class="col-sm-2 control-label">账号</label>
-                  <div class="col-sm-10">
+<div class="login-header">
+    <div class="logo"></div>
+    <div class="login-logo">用户登录</div>
+</div>
+<div class="contain">
+    <div class="login">
+        <div class="title" style="margin-top: 15px; text-align: center; font-size: 30px;">登录</div>
+        <form action="login" method="post" class="form-horizontal">
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-2 control-label">账号</label>
+                <div class="col-sm-10">
                     <input type="text" name="userName" class="form-control" id="inputEmail3" placeholder="请输入账号">
-                  </div>
                 </div>
-                <div class="form-group" style="margin-top: 20px;">
-                  <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
-                  <div class="col-sm-10">
+            </div>
+            <div class="form-group" style="margin-top: 20px;">
+                <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
+                <div class="col-sm-10">
                     <input type="password" name="password" class="form-control" id="inputPassword3" placeholder="请输入密码">
-                  </div>
                 </div>
-                <div class="form-group">
-                  <div class="col-sm-offset-2 col-sm-10">
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
                     <div class="checkbox">
-                      <label>
-                        <input type="checkbox"> 记住密码
-                      </label>
+                        <label>
+                            <input type="checkbox"> 记住密码
+                        </label>
                     </div>
-                  </div>
                 </div>
-                <div class="form-group">
-                  <div class="col-sm-offset-2 col-sm-10 ">
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10 ">
                     <button type="submit" class="btn btn-default login-btn">登录</button>
-                  </div>
                 </div>
-              </form>
-              <span >
+            </div>
+        </form>
+        <span>
                 <a href="#">忘记密码</a>
                   <a href="regist.html">免费注册</a>
               </span>
-        </div>
     </div>
-    
+</div>
+
 </body>
 </html>
