--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -14,6 +14,7 @@
         <div class="logo"></div>
         <div class="login-logo">用户登录</div>
     </div>
+    <div class="bg" style="position: absolute; width: 100%;height: 600px; background-image:url(../image/bg.png) ;"></div>
     <div class="contain">
         <div class="login">
             <div class="title" style="margin-top: 15px; text-align: center; font-size: 30px;">登录</div>
@@ -51,6 +52,22 @@
               </span>
         </div>
     </div>
+    <!-- 底部 -->
+  <div class="footer">
+    <div class="w">
+        <div class="copyright" style="float: left; margin-top: 15px; font-size: 12px ;color: #7b7b7b;">
+            <h4>关于我们</h4> 西柚有余倾力打造的校园二手信息共享台。<br/>
+        师生将商品上传到 该 平台，用户可以选择自己需要的产品，平台免费使用。</div>
+        <div class="links" style="float: right;margin-top: 15px; color: #7b7b7b; font-size: 12px;">
+            <h4>友情链接</h4>
+            <a href="#">西南石油大学</a>
+            <a href="#">学工系统</a>
+            <a href="#">四川省教育厅</a>
+            <a href="#">教务处</a>
+          
+        </div>
+    </div>
+</div>
     
 </body>
 </html>
