--- a/src/main/webapp/pages/regist.html
+++ b/src/main/webapp/pages/regist.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>西柚有余|注册</title>
+    <script type="text/javascript" src="../plugins/jQuery/jquery-2.2.3.min.js"> </script>
+
     <link rel="stylesheet" href="../plugins/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/css.css">
 
@@ -24,7 +26,7 @@
             <div class="regist-logo">用户注册</div>
         </div>
         <div class="regist">
-            <form class="form-horizontal" style="padding-right:145px;padding-left: 145px;">
+            <form class="form-horizontal" style="padding-right:145px;padding-left: 145px;" onsubmit="return verify()" >
                 <div class="form-group">
                   <label for="inputEmail3" class="col-sm-2 control-label">账号</label>
                   <div class="col-sm-10">
@@ -32,13 +34,13 @@
                   </div>
                 </div>
                 <div class="form-group" style="margin-top: 20px;">
-                  <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
+                  <label for="inputPassword3" class="col-sm-2 control-label"  >密码</label>
                   <div class="col-sm-10">
                     <input type="password" class="form-control" id="inputPassword3" style="width: 300px;" placeholder="请输入密码">
                   </div>
                 </div>
                 <div class="form-group" style="margin-top: 20px;">
-                    <label for="inputPassword4" class="col-sm-2 control-label">确认密码</label>
+                    <label for="inputPassword4" class="col-sm-2 control-label" >确认密码</label>
                     <div class="col-sm-10">
                       <input type="password" class="form-control" id="inputPassword4" style="width: 300px; "placeholder="请再次输入密码">
                     </div>
@@ -68,6 +70,20 @@
           </div>
       </div>
   </div>
+
+  <script>
+     //验证密码
+     function verify(){
+        var a= $("#inputPassword3").val();
+        // console.log(a=='')
+        var b=$("#inputPassword4").val();
+        // console.log(b)
+        if(a=='' ||a!=b){
+           alert("输入有误！")
+           return false;
+        }
+     }
+  </script>
 
     
 </body>
