--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -22,13 +22,13 @@
                 <div class="form-group">
                   <label for="inputEmail3" class="col-sm-2 control-label">账号</label>
                   <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputEmail3" placeholder="请输入账号">
+                    <input type="text" class="form-control" id="inputEmail3" name="userName" placeholder="请输入账号">
                   </div>
                 </div>
                 <div class="form-group" style="margin-top: 20px;">
                   <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
                   <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword3" placeholder="请输入密码">
+                    <input type="password" class="form-control" id="inputPassword3" name="password" placeholder="请输入密码">
                   </div>
                 </div>
                 <div class="form-group">
